--- a/scss/_sc-settings.scss
+++ b/scss/_sc-settings.scss
@@ -13,6 +13,7 @@ $color-secondary-2: $teal;
 $color-secondary-3: $light-blue;
 $color-secondary-4: $dark-blue;
 $color-white: #fff;
+$color-dark-grey: #373a3c;
 $color-grey-medium: #727272;
 
 // Typography
