--- a/scss/sc-src/_base.scss
+++ b/scss/sc-src/_base.scss
@@ -2,6 +2,8 @@
 // ----
 //
 // Sections
+// - Inline Search
+// - Colours
 // Info Boxes
 // Lists
 //
@@ -41,16 +43,77 @@
   }
 }
 
-// Section Colours
+// - Inline Search
+// 1. hide labels visually using base Zurb class
+// 2. reset height to match default size
 
-.section-gray {
+.search {
+	margin-bottom: 3rem;
+	padding-top: 1rem;
+	background-color: $dark-blue;
+
+	label {
+		@extend .show-for-sr; // 1
+	}
+
+	.input-group-field {
+		height: 2.4375rem; // 2
+	}
+}
+
+@media screen and (max-width: $breakpoint-xs-down) {
+
+	.search {
+
+		.input-group {
+			flex-wrap: wrap;
+		}
+
+		.input-group-button {
+			flex: 1 0 100%;
+		}
+
+		.button {
+			width: 100%;
+    	height: 2.4375rem;
+    	margin-top: 1rem;
+		}
+	}
+
+}
+
+@media screen and (min-width: $breakpoint-xs) {
+
+	.search {
+		.input-group-button {
+			margin-left: 0.5rem;
+		}
+	}
+}
+
+@media screen and (min-width: $breakpoint-sm) {
+
+	.search {
+		.cell + .cell {
+			margin-left: 0.5rem; // add some space between cells
+		}
+	}
+}
+
+// - Colours
+
+.section-bg-secondary-4 {
+  background-color: $color-secondary-4;
+}
+
+.section-bg-grey {
   background-color: $light-gray;
 }
 
 .section-inverse {
   color: $color-white;
 
-  .content-cta-title {
+	.content-cta-title {
     color: $color-white;
   }
 }
