moved pseudo inner shadow to help class function file, more simple to use @extend vs overrides

--- a/scss/_sc-config.scss
+++ b/scss/_sc-config.scss
@@ -1,6 +1,9 @@
 // Global Variables
 @import 'sc-settings';
 
+// Mixins & Helpers
+@import 'sc-helpers';
+
 // Base Theme
 @import 'sc-src/base';
 
