--- a/css/app.css
+++ b/css/app.css
@@ -6367,6 +6367,18 @@ ol.list-upper-roman {
 .long-delay {
   animation-delay: 700ms !important; }
 
+.hero::after, .hero-carousel .hero-carousel-cell::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #0a0a0a;
+  background: -webkit-linear-gradient(0deg, rgba(10, 10, 10, 0.7) 0%, rgba(10, 10, 10, 0) 60%);
+  background: linear-gradient(0deg, rgba(10, 10, 10, 0.7) 0%, rgba(10, 10, 10, 0) 60%);
+  pointer-events: none; }
+
 .content-cta {
   margin-left: auto;
   margin-right: auto;
@@ -6572,16 +6584,6 @@ ol.list-upper-roman {
   background-repeat: no-repeat;
   background-size: auto 100%;
   overflow: hidden; }
-  .hero::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: #0a0a0a;
-    background: -webkit-linear-gradient(0deg, rgba(10, 10, 10, 0.7) 0%, rgba(10, 10, 10, 0) 60%);
-    background: linear-gradient(0deg, rgba(10, 10, 10, 0.7) 0%, rgba(10, 10, 10, 0) 60%); }
 
 .hero.hero-secondary {
   height: 250px; }
@@ -6965,3 +6967,50 @@ blockquote cite {
 @media screen and (min-width: 60em) {
   .carousel-cell {
     width: 33.3333%; } }
+
+.hero-carousel {
+  background: #01266C; }
+  .hero-carousel img {
+    width: 100%;
+    height: auto; }
+  .hero-carousel .flickity-page-dots {
+    left: 15%;
+    right: 15%;
+    bottom: 20px;
+    width: auto; }
+  .hero-carousel .flickity-page-dots .dot {
+    position: relative;
+    margin: 0;
+    width: 25%;
+    height: 4px;
+    background: transparent;
+    border-radius: 0;
+    opacity: 1; }
+    .hero-carousel .flickity-page-dots .dot::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 1px;
+      right: 1px;
+      background: #727272; }
+  .hero-carousel .flickity-page-dots .dot:hover::before {
+    background: #00a5a1; }
+  .hero-carousel .flickity-page-dots .dot.is-selected {
+    background: transparent; }
+    .hero-carousel .flickity-page-dots .dot.is-selected::before {
+      background: #00a5a1; }
+
+.hero-carousel-cell {
+  width: 100%; }
+
+.hero-carousel-cell-content {
+  position: absolute;
+  left: 15%;
+  right: 15%;
+  bottom: 80px;
+  text-align: center;
+  z-index: 10; }
+
+.hero-carousel-title {
+  color: #fff; }
