--- a/scss/sc-src/_banner.scss
+++ b/scss/sc-src/_banner.scss
@@ -12,9 +12,9 @@
   height: $hero-image-sm;
   color: $color-white;
   background-color: $dark-gray;
-  background-position: center bottom;
+  background-position: center center;
   background-repeat: no-repeat;
-  background-size: auto 100%;
+  background-size: cover;
 	overflow: hidden;
 	
 	&::after {
