initial commit: adding css grid base styles

--- a/scss/_sc-config.scss
+++ b/scss/_sc-config.scss
@@ -13,6 +13,7 @@
 @import 'sc-src/buttons';
 @import 'sc-src/footer';
 @import 'sc-src/forms';
+@import 'sc-src/grid';
 @import 'sc-src/header';
 @import 'sc-src/icons';
 @import 'sc-src/modals';
