updated spacing definitions to variables, added variable for tab height to reduce repitition

--- a/scss/_sc-settings.scss
+++ b/scss/_sc-settings.scss
@@ -36,6 +36,7 @@ $text-uppercase: uppercase;
 
 // UI Components
 $border-radius-circle: 50%;
+$tab-height: 45px;
 
 // Icons
 $icon-font: 'sc-icons';
