--- a/scss/sc-src/_base.scss
+++ b/scss/sc-src/_base.scss
@@ -97,9 +97,9 @@ section {
 // Info Boxes
 
 .feature-box {
-  margin-bottom: 2rem;
-  padding: 1.125rem;
-  background-color: $light-gray;
+	margin: $spacing-xl 0;
+	padding: $spacing-lg;
+	background-color: $light-gray;
 
   > :first-child {
     margin-top: 0;
@@ -185,10 +185,6 @@ section {
   -webkit-column-gap: 2rem;
   -moz-column-gap: 2rem;
   column-gap: 2rem;
-  border-top: 1px solid $color-white;
-  border-bottom: 1px solid $color-white;
-  margin-top: 1rem;
-  padding-top: 1rem;
 
   li {
     -webkit-column-break-inside: avoid; /* Chrome, Safari, Opera */
