--- a/scss/app.scss
+++ b/scss/app.scss
@@ -19,7 +19,7 @@
 @include foundation-breadcrumbs;
 @include foundation-button-group;
 @include foundation-callout;
-@include foundation-card;
+//@include foundation-card;
 @include foundation-close-button;
 @include foundation-menu;
 @include foundation-menu-icon;
@@ -30,9 +30,9 @@
 @include foundation-label;
 @include foundation-media-object;
 @include foundation-off-canvas;
-@include foundation-orbit;
+//@include foundation-orbit;
 @include foundation-pagination;
-@include foundation-progress-bar;
+//@include foundation-progress-bar;
 @include foundation-slider;
 @include foundation-sticky;
 @include foundation-reveal;
@@ -41,7 +41,7 @@
 @include foundation-tabs;
 @include foundation-thumbnail;
 @include foundation-title-bar;
-@include foundation-tooltip;
+//@include foundation-tooltip;
 @include foundation-top-bar;
 @include foundation-visibility-classes;
 // @include foundation-float-classes;
