--- a/scss/sc-src/_tabs.scss
+++ b/scss/sc-src/_tabs.scss
@@ -54,12 +54,12 @@
 	.page-tabs {
 		position: relative;
 		margin-top: -$tab-height;
-		padding-top: 0;
+		padding: 0;
 	}
 
-	.tabs-panel-title {
-		text-align: center;
-	}
+	// .tabs-panel-title {
+	// 	text-align: center;
+	// }
 
 }
 
