--- a/scss/sc-src/_typography.scss
+++ b/scss/sc-src/_typography.scss
@@ -45,6 +45,6 @@ hr {
 	padding: 0;
 	height: 1px;
 	border: 0;
-	border-top: 1px solid $medium-gray;
+	border-top: 1px solid $light-gray;
 	box-sizing: content-box;
 }
