--- a/css/app.css
+++ b/css/app.css
@@ -6163,7 +6163,7 @@ section {
   background-color: #01266C; }
 
 .section-bg-grey {
-  background-color: #e6e6e6; }
+  background-color: #f4f4f4; }
 
 .section-inverse {
   color: #fff; }
@@ -6176,8 +6176,6 @@ section {
   .section-feature .content-overlay {
     padding: 2rem 3rem;
     background-color: rgba(10, 10, 10, 0.4); }
-  .section-feature .content-cta {
-    margin-bottom: 0; }
 
 .section-feature-image {
   background-position: center center;
@@ -6289,6 +6287,155 @@ section {
     column-gap: 20px;
     column-count: 2;
     column-gap: 20px; } }
+
+.top-bar {
+  padding: 0.75rem 1rem;
+  background-color: #005593; }
+  .top-bar .menu {
+    align-items: center;
+    background-color: transparent; }
+
+.logo {
+  width: auto;
+  height: 34px; }
+
+.menu .menu-text {
+  padding: 0; }
+
+.menu a {
+  color: #fff;
+  text-transform: uppercase; }
+  .menu a:hover {
+    color: rgba(255, 255, 255, 0.7); }
+
+.top-bar .top-bar-right li + li {
+  margin-left: 0.5rem; }
+
+.dropdown.menu .submenu {
+  background-color: #00aeef;
+  border: 0;
+  min-width: 220px; }
+
+.dropdown.menu .is-active {
+  background-color: #00aeef; }
+  .dropdown.menu .is-active > a {
+    color: #fff; }
+
+.dropdown.menu > li.is-dropdown-submenu-parent > a {
+  padding-right: 1rem; }
+
+.dropdown.menu li.is-dropdown-submenu-parent > a::after {
+  content: none; }
+
+.is-submenu-item {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2); }
+  .is-submenu-item a {
+    text-transform: none; }
+  .is-submenu-item:last-child {
+    border-bottom: 0; }
+
+@media screen and (max-width: 767px) {
+  .top-bar .top-bar-left {
+    flex: 1 0 50%;
+    max-width: initial; }
+  .top-bar .top-bar-right {
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: flex-end; }
+    .top-bar .top-bar-right .button-text {
+      display: none; }
+    .top-bar .top-bar-right .button-icon-left i {
+      margin-right: 0; } }
+
+@media screen and (min-width: 48em) {
+  .top-bar {
+    padding: 1.5rem; }
+  .menu-text {
+    margin-right: 1.5rem; }
+  .logo {
+    height: 50px; } }
+
+.footer {
+  padding: 3rem 1rem;
+  color: #fff;
+  text-transform: uppercase;
+  background-color: #005593; }
+  .footer a {
+    color: #fff; }
+    .footer a:hover {
+      opacity: 0.7; }
+  .footer li + li {
+    margin-left: 1rem; }
+
+.footer-nav {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25); }
+
+.footer-nav-social {
+  font-size: 1.25rem; }
+  .footer-nav-social a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    color: #005593;
+    line-height: 1;
+    background-color: #fff;
+    border-radius: 50%; }
+
+.article-list-item {
+  margin-bottom: 2.5rem; }
+
+.article-list-title {
+  font-size: 1.25rem; }
+  .article-list-title a {
+    color: #373a3c; }
+    .article-list-title a:hover {
+      color: #00a5a1; }
+
+.category-tag {
+  display: block;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  color: #373a3c;
+  font-weight: 600;
+  margin-left: 0.75rem; }
+  .category-tag:before {
+    content: "";
+    display: inline-block;
+    width: 3px;
+    height: 12px;
+    position: relative;
+    top: 2px;
+    left: -8px;
+    background-color: #00a5a1;
+    -moz-transform-origin: center;
+    -ms-transform-origin: center;
+    -o-transform-origin: center;
+    transform-origin: center;
+    -moz-transform: skew(-28deg);
+    -ms-transform: skew(-28deg);
+    -o-transform: skew(-28deg);
+    transform: skew(-28deg); }
+
+@media screen and (max-width: 47.938em) {
+  .article-list-image img {
+    width: 100%; } }
+
+@media screen and (min-width: 40em) {
+  .article-list-item {
+    display: flex; }
+  .article-list-image {
+    flex: 1 0 40%;
+    margin-right: 2rem; }
+  .category-tag {
+    margin-top: 0; } }
+
+@media screen and (min-width: 48em) {
+  .article-list-image {
+    flex: 1 0 25%; } }
 
 .accordion-item {
   border-top: 1px solid #cacaca; }
@@ -6421,34 +6568,6 @@ section {
   .form-button {
     min-width: 320px; } }
 
-.footer {
-  padding: 3rem 1rem;
-  color: #fff;
-  text-transform: uppercase;
-  background-color: #005593; }
-  .footer a {
-    color: #fff; }
-    .footer a:hover {
-      opacity: 0.7; }
-  .footer li + li {
-    margin-left: 1rem; }
-
-.footer-nav {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.25); }
-
-.footer-nav-social {
-  font-size: 1.25rem; }
-  .footer-nav-social a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    color: #005593;
-    line-height: 1;
-    background-color: #fff;
-    border-radius: 50%; }
-
 legend.middle {
   margin: 0 0 1rem;
   padding: 0.5625rem 0; }
@@ -6487,7 +6606,7 @@ input[type='text'], [type='password'], [type='email'], [type='number'], [type='s
 
 .card-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-column-gap: 1rem;
   grid-row-gap: 1.5rem;
   margin: 2.5rem 0;
@@ -6510,73 +6629,6 @@ input[type='text'], [type='password'], [type='email'], [type='number'], [type='s
 .card-title {
   color: #00a5a1;
   font-size: 1rem; }
-
-.top-bar {
-  padding: 0.75rem 1rem;
-  background-color: #005593; }
-  .top-bar .menu {
-    align-items: center;
-    background-color: transparent; }
-
-.logo {
-  width: auto;
-  height: 34px; }
-
-.menu .menu-text {
-  padding: 0; }
-
-.menu a {
-  color: #fff;
-  text-transform: uppercase; }
-  .menu a:hover {
-    color: rgba(255, 255, 255, 0.7); }
-
-.top-bar .top-bar-right li + li {
-  margin-left: 0.5rem; }
-
-.dropdown.menu .submenu {
-  background-color: #00aeef;
-  border: 0;
-  min-width: 220px; }
-
-.dropdown.menu .is-active {
-  background-color: #00aeef; }
-  .dropdown.menu .is-active > a {
-    color: #fff; }
-
-.dropdown.menu > li.is-dropdown-submenu-parent > a {
-  padding-right: 1rem; }
-
-.dropdown.menu li.is-dropdown-submenu-parent > a::after {
-  content: none; }
-
-.is-submenu-item {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2); }
-  .is-submenu-item a {
-    text-transform: none; }
-  .is-submenu-item:last-child {
-    border-bottom: 0; }
-
-@media screen and (max-width: 767px) {
-  .top-bar .top-bar-left {
-    flex: 1 0 50%;
-    max-width: initial; }
-  .top-bar .top-bar-right {
-    flex: 1 0 auto;
-    display: flex;
-    justify-content: flex-end; }
-    .top-bar .top-bar-right .button-text {
-      display: none; }
-    .top-bar .top-bar-right .button-icon-left i {
-      margin-right: 0; } }
-
-@media screen and (min-width: 48em) {
-  .top-bar {
-    padding: 1.5rem; }
-  .menu-text {
-    margin-right: 1.5rem; }
-  .logo {
-    height: 50px; } }
 
 @font-face {
   font-family: 'sc-icons';
@@ -6710,9 +6762,7 @@ input[type='text'], [type='password'], [type='email'], [type='number'], [type='s
   .page-tabs {
     position: relative;
     margin-top: -45px;
-    padding-top: 0; }
-  .tabs-panel-title {
-    text-align: center; } }
+    padding: 0; } }
 
 @media screen and (min-width: 64em) {
   .tabs-title a {
@@ -6743,7 +6793,7 @@ hr {
   padding: 0;
   height: 1px;
   border: 0;
-  border-top: 1px solid #cacaca;
+  border-top: 1px solid #e6e6e6;
   box-sizing: content-box; }
 
 .cell-center {
