--- a/scss/sc-src/_tabs.scss
+++ b/scss/sc-src/_tabs.scss
@@ -54,12 +54,8 @@
 	.page-tabs {
 		position: relative;
 		margin-top: -$tab-height;
-		padding: 0;
+		padding-top: 0;
 	}
-
-	// .tabs-panel-title {
-	// 	text-align: center;
-	// }
 
 }
 
