--- a/scss/sc-src/_blog.scss
+++ b/scss/sc-src/_blog.scss
@@ -22,38 +22,29 @@
 	margin-bottom: $spacing-xs;
 	font-size: 0.75rem;
 	text-transform: uppercase;
-	color: $color-dark-grey;
+	color: $color-secondary-2;
 	font-weight: 600;
-	margin-left: $spacing-sm;
+	//margin-left: $spacing-sm;
 
 	// experimental pseudo element for visual decoration
-	&:before {
-		content: "";
-		display: inline-block;
-		width: 3px;
-		height: 12px;
-		position: relative;
-		top: 2px;
-		left: -8px;
-		background-color: $color-secondary-2;
-		-moz-transform-origin: center;
-		-ms-transform-origin: center;
-		-o-transform-origin: center;
-		transform-origin: center;
-		-moz-transform: skew(-28deg);
-		-ms-transform: skew(-28deg);
-		-o-transform: skew(-28deg);
-		transform: skew(-28deg);
-	}
-}
-
-@media screen and (max-width: $breakpoint-md-down) {
-
-		.article-list-image {
-			img {
-				width: 100%;
-			}
-		}
+	// &:before {
+	// 	content: "";
+	// 	display: inline-block;
+	// 	width: 3px;
+	// 	height: 12px;
+	// 	position: relative;
+	// 	top: 2px;
+	// 	left: -8px;
+	// 	background-color: $color-secondary-2;
+	// 	-moz-transform-origin: center;
+	// 	-ms-transform-origin: center;
+	// 	-o-transform-origin: center;
+	// 	transform-origin: center;
+	// 	-moz-transform: skew(-28deg);
+	// 	-ms-transform: skew(-28deg);
+	// 	-o-transform: skew(-28deg);
+	// 	transform: skew(-28deg);
+	// }
 }
 
 @media screen and (min-width: $breakpoint-sm) {
